# polymarket-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  paper_trading_state.json  polymarket-bot.service
docs/: ARCHITECTURE_REVIEW.md  TONIGHT_PROGRESS.md
scripts/: real_settlement_tracker.py
src/: config_tests.rs  lib.rs  main.rs  types_tests.rs
src/analysis/: mod.rs  pattern.rs  tests.rs  trader_profile.rs
src/client/: auth.rs  clob.rs  gamma.rs
src/executor/: latency_optimizer.rs  mod.rs  price_optimizer.rs
src/ingester/: processor.rs  telegram.rs  tests.rs
src/ml/: factors.rs  mod.rs  predictor.rs  tests.rs
src/model/: mod.rs  tests.rs
src/monitor/: dashboard.rs  mod.rs
src/orderbook/: mod.rs
src/paper/: auto_trader.rs  mod.rs
src/portfolio/: mod.rs
src/regime/: mod.rs
src/routing/: mod.rs
src/scanner/: cross_price_arb.rs  mod.rs
src/strategy/: compound.rs  compound_tests.rs  copy_trade.rs  copy_trade_tests.rs  crypto_hf.rs  mod.rs  realtime.rs  signal_filter.rs  tests.rs
src/telegram/: mod.rs
